{{$NEXT}}

0.738  2022-01-14 07:50:21 CET
   - release after 64 PASSes on CPAN Testers (thanks!)

0.737  2022-01-13 22:42:41 CET
   - tubify dispatch handlers defined as array refs, now DWIM
   - more testing (dispatch)
   - add support for environment variables in tubergen

0.736  2016-11-11 23:26:03 CET
   - release on CPAN (CPAN Testers seems out these days...)

0.735002  2016-11-11 13:25:38 CET
   - exact loading Plumbing (formerly brittle)

0.735001  2016-11-06 00:36:11 CET
   - simplified resolve_module() [after feedback from Doug Bell]
   - simplified drain() [after feedback from Doug Bell]
   - added support for versioned API

0.735  2016-10-22 01:34:04 CEST
   - documentation fixes
   - add new "tap"s for pipeline: array and first
   - extend tube() and tubify() to include options
   - add "gate" to pipeline/sequence

0.734  2016-06-24 08:03:56 CEST
   - release after 126 PASSes in CPAN Testers (thanks!)

0.733  2016-06-22 14:01:22 CEST
   - better documentation for `drain`
   - slight enhancements to the docs
   - `factory` in `dispatch` now goes through `tubify`
   - moved validator `with_subs` to `thoroughly`, also extended
   - extended Travis-CI to 5.24 and 5.22 too
   - turned doc for subs into =head2 instead of =item

0.732  2016-05-13 22:58:40 CEST
   - release after 100 PASSes in CPAN Testers (thanks!)
   - documented tap type `bucket`

0.731  2016-05-12 09:41:34 CEST
   - upgraded dependency for Template::Perlish (no STDOUT clobbering)
   - documented "value" in parse_by_format
   - added tap type `bucket`

0.730  2016-05-03 22:08:39 CEST
   - added note about workaround in documentation for Parser
   - added test for package variable cleanup

0.729001  2016-05-02 23:09:55 CEST
   - fixed bug in handling regexes as "value" in parsers
   - workaround for pre-5.18 perl

0.729  2016-05-01 23:00:31 CEST
   - tubergen-generated scripts are now easier to write and use
   - with_template_perlish: templates in records