@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - finalize change to Try::Catch from Try::Tiny
 
 0.738  2022-01-14 07:50:21 CET
    - release after 64 PASSes on CPAN Testers (thanks!)
